@@ -1,3 +1,8 @@
+2005-04-16  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: add application/x-gedcom as a mime-type
+	for GEDCOM family history files
+
 2005-04-16  Christophe Fergeau  <teuf@gnome.org>
 
 	* freedesktop.org.xml:
